--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
 </body>
 </html>
